backend/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: 5elementsofai
  name: backend
  labels:
    service: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
