backend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: 5elementsofai
  name: backend-ingress
spec:
  rules:
  - host: api.aiproduct.space
    http:
    paths:
    - backend:
        serviceName: backend
        servicePort: 80
